2012-12-31  Russ Allbery  <rra@stanford.edu>

	* t/aliases-env.t: Fix logic for skipping tests when Test::Warn is
	not installed.

2012-12-30  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 4.00 released.

	* LICENSE: New file summarizing copyright and license information.

	* examples/generate-colors: Add support for "basic" and "bright"
	test file types that test all the other supported attributes.
	* tests/README: Remove VT100 test files.  The license was unclear,
	and the new generate-colors example script does everything they do
	of significance for this package plus more.
	* tests/ansicolor: Likewise.
	* tests/vt100-torture: Likewise.

	* ANSIColor.pm (PUSHCOLOR): Take an array like all the other
	constant functions and join all arguments together before
	manipulating it.
	* t/basic.t: Multiple new tests for various weird edge cases.

	* ANSIColor.pm (AUTOLOAD): Only honor ANSI_COLORS_DISABLED if it
	is set to a true value.
	(color): Likewise.
	(colored): Likewise.
	* t/basic.t: Test that ANSI_COLORS_DISABLED must be true.

	* t/synopsis.t: New test for SYNOPSIS syntax.

	* ANSIColor.pm: Add COMPATIBILITY section to the documentation,
	collecting all information about when features were introduced and
	adding the version of Perl that they shipped with.  Add
	appropriate version numbers to the use statements in the SYNOPSIS.

	* ANSIColor.pm: Use coloralias to load aliases from the
	environment.  Improve commenting in the SYNOPSIS.  Document the
	new alias name restrictions.
	(coloralias): New function to set a color alias.  Enforce
	restrictions on the acceptable alias name.

	* t/aliases-env.t: Adjust warning test for new error message.
	* t/aliases-func.t: New test of coloralias.

2012-12-29  Stephen Thirlwall  <stephen.thirlwall@strategicdata.com.au>
	    Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add support for custom color names configured with
	the ANSI_COLORS_ALIASES environment variable as set during module
	load.