@@ -18,5 +18,7 @@ if (!eval { require Test::Pod }) {
 }
 Test::Pod->import;
 
-# Check all POD in the Perl distribution.
-all_pod_files_ok();
+# Check all POD in the Perl distribution.  Add the examples directory.
+my @files = all_pod_files();
+push @files, 'examples';
+all_pod_files_ok(@files);
